[workspace]
members = ["packages/*"]
exclude = ["wasm3-rs"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
vex-sdk = "0.23.0"

[workspace.dependencies.vexide]
git = "https://github.com/vexide/vexide.git"
default-features = false
features = ["core", "devices", "async", "panic"]
